[package]
name = "dnsproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
byteorder = "*"
log = "*"
getrandom = "0.2"
bitflags = "*"
socketpair = "*"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
url = "*"
base64 = "*"
